fixed scrollbars on chrome

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,7 +13,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	font-family: "Poppins", sans-serif;
-	background: rgb(235, 235, 235);
+	background: rgb(223, 222, 220);
 	overflow-x: hidden;
 }
 
